fix: Allow building mars_ros2 in debug
Signed-off-by: Tanner, Gilbert <gilbertta@edu.aau.at>

--- a/mars_ros/CMakeLists.txt
+++ b/mars_ros/CMakeLists.txt
@@ -19,6 +19,12 @@ find_package(Eigen3 REQUIRED)
 set(mars_lib_DIR ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 find_package(mars_lib REQUIRED)
 
+if (CMAKE_BUILD_TYPE STREQUAL "Release")
+  set(MARS_LIBRARY ${MARS_LIBRARY_RELEASE})
+elseif (CMAKE_BUILD_TYPE STREQUAL "Debug")
+  set(MARS_LIBRARY ${MARS_LIBRARY_DEBUG})
+endif ()
+
 message("** ROS2 Build **")
 message(" * Eigen: ${EIGEN3_INCLUDE_DIR}")
 message(" * Mars:  ${MARS_INCLUDE_DIRS}")
